# App-VKClient

./: .env  README.md  pyproject.toml
src/: __init__.py  client.py  config.py  main.py  run.py
src/controllers/: message.py  send_panel.py
src/services/: colors.py  handler.py  vk.py
src/utils/: files.py
src/views/: container.py  main.kv  message.kv  message.py  send_panel.kv
