[tool.poetry]
name = "app-vkclient"
version = "0.1.0"
description = ""
authors = ["Yevgeniy Kap <kapustaevg@gmail.com>"]
readme = "README.md"
packages = [{include = "app_vkclient"}]

[tool.poetry.dependencies]
python = "^3.11"
kivymd = "^1.1.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
vk-api = "^11.9.9"
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
